# rose

./: .bandit  .codacy.yml  .codecov.yml  .coveragerc  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .mailmap  .prove  .travis.yml  404.md  ACKNOWLEDGEMENT.md  CHANGES.md  CONTRIBUTING.md  INSTALL  MANIFEST.in  README  README.md  _config.yml  a  after  b  before  conda-environment.yml  doc  index.html  jupyterhub.sqlite  jupyterhub_cookie_secret  mypy.ini  package.json  pyproject.toml  pytest.ini  rose-version  rose.html  setup.cfg  setup.py  tox.ini  versions.json
.github/: dependabot.yml
.github/workflows/: 1_create_release_pr.yml  2_auto_publish_release.yml  branch_sync.yml  build.yml  deploy_pages.yml  fast-tests.yml  shortlog.yml  test-conda-builds.yml  test.yml  test_file_install_from.yml  test_rsync_test_script.yml  update_copyright.yml  update_tutorials.yml
.travis/: cover.py  now  shellchecker  sitecustomize.py
2.0.0/doctrees/: environment.pickle  getting-started.doctree  glossary.doctree  hyperlinks.doctree  index.doctree  installation.doctree  terms.doctree
2.0.0/html/: .buildinfo  genindex.html  getting-started.html  glossary.html  http-routingtable.html  hyperlinks.html  index.html  installation.html  py-modindex.html  search.html  searchindex.js  terms.html
2.0.0/slides/: .buildinfo  console.html  genindex.html  getting-started.html  glossary.html  http-routingtable.html  hyperlinks.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  terms.html
2.0b1/doctrees/: cheat-sheet.doctree  environment.pickle  getting-started.doctree  glossary.doctree  hyperlinks.doctree  index.doctree  installation.doctree  terms.doctree
2.0b1/html/: .buildinfo  cheat-sheet.html  genindex.html  getting-started.html  glossary.html  http-routingtable.html  hyperlinks.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  terms.html
2.0b1/slides/: .buildinfo  cheat-sheet.html  console.html  genindex.html  getting-started.html  glossary.html  http-routingtable.html  hyperlinks.html  index.html  installation.html  py-modindex.html  search.html  searchindex.js  terms.html
2.0b2/doctrees/: cheat-sheet.doctree  environment.pickle  getting-started.doctree  glossary.doctree  hyperlinks.doctree  index.doctree  installation.doctree  terms.doctree
2.0b2/html/: .buildinfo  cheat-sheet.html  genindex.html  getting-started.html  glossary.html  http-routingtable.html  hyperlinks.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  terms.html
2.0b2/slides/: .buildinfo  cheat-sheet.html  console.html  genindex.html  getting-started.html  glossary.html  http-routingtable.html  hyperlinks.html  index.html  installation.html  py-modindex.html  search.html  searchindex.js  terms.html
2.0rc1/doctrees/: environment.pickle  getting-started.doctree  glossary.doctree  hyperlinks.doctree  index.doctree  installation.doctree  terms.doctree
2.0rc1/html/: .buildinfo  genindex.html  getting-started.html  glossary.html  http-routingtable.html  hyperlinks.html  index.html  installation.html  py-modindex.html  search.html  searchindex.js  terms.html
2.0rc1/slides/: .buildinfo  console.html  genindex.html  getting-started.html  glossary.html  http-routingtable.html  hyperlinks.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  terms.html
2.0rc2/doctrees/: environment.pickle  getting-started.doctree  glossary.doctree  hyperlinks.doctree  index.doctree  installation.doctree  terms.doctree
2.0rc2/html/: .buildinfo  genindex.html  getting-started.html  glossary.html  http-routingtable.html  hyperlinks.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  terms.html
2.0rc2/slides/: .buildinfo  console.html  genindex.html  getting-started.html  glossary.html  http-routingtable.html  (+7 more)
changes.d/: 2808.feat.md  2889.fix.md  2892.fix.md  2979.feat.md  2985.feat.md  3019.feat.md  3022.fix.md  3038.feat.md  3040.feat.md
doc/: Makefile  changes-2013.md  index.html  jquery.min.js  rose-advanced-topics.html  rose-api.html  rose-brief-tour.html  rose-command.html  rose-conf-meta-dev.html  rose-config-api.html  rose-config-edit-GUI.html  rose-config-edit-gui.html  rose-config-edit.html  rose-configuration-metadata.html  rose-configuration.html  rose-doc.css  rose-doc.js  rose-getting-started.html  rose-install.html  rose-introduction.html  rose-overview-in-depth-topics.html  rose-overview-introduction.html  rose-overview-suites.html  rose-quick-ref.html  rose-quiz.js  rose-rosie-advice.html  rose-rug-advanced-tutorials-arch.html  rose-rug-advanced-tutorials-broadcast.html  rose-rug-advanced-tutorials-bunch.html  rose-rug-advanced-tutorials-clock-triggered.html  rose-rug-advanced-tutorials-command-key.html  rose-rug-advanced-tutorials-fail-if.html  rose-rug-advanced-tutorials-family-trigs.html  rose-rug-advanced-tutorials-jinja2.html  rose-rug-advanced-tutorials-macro.html  rose-rug-advanced-tutorials-multi-inherit.html  rose-rug-advanced-tutorials-namespace.html  rose-rug-advanced-tutorials-opt-conf.html  rose-rug-advanced-tutorials-parameterization-and-jinja2.html  rose-rug-advanced-tutorials-polling.html  (+51 more)
etc/: .rose-bash-completion  changes-2014.md  changes-2015.md  changes-2016.md  changes-2017.md  deploy-docs  rose-bash-completion  rose-conf-mode.el  rose-conf.lang  rose-conf.vim  rose-conf.xml  rose-docs-env.yaml  rose-edit-capabilities.md  rose.conf.example  rosie-wsgi.conf.example  travis-scripts
metomi_rose.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sbin/: rosa  rosa-db-create  rosa-rpmbuild  rosa-svn-post-commit  rosa-svn-pre-commit  rosa-ws
sphinx/: Makefile  cheat-sheet.rst  conf.py  extract-pdf-documents.py  getting-started.rst  glossary.rst  hyperlinks.rst  hyperlinks.txt  index.rst  installation.rst  terms.rst
t/: 01-job-host-clean.out  02-job-host-with-share-clean.out  test_rose_app_run.py  test_rsync_loc_handlers.sh
tests/: conftest.py
(+5540 files in other folders)
