# Copyright (C) British Crown (Met Office) & Contributors.
#
# This file is part of Rose, a framework for meteorological suites.
#
# Rose is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Rose is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Rose. If not, see <http://www.gnu.org/licenses/>.

[metadata]
name = metomi-rose
description = Rose, a framework for meteorological suites.
author = British Crown (Met Office) & Contributors
author_email = metomi@metoffice.gov.uk
url=https://metomi.github.io/rose/doc/html/index.html
license = GPL
license_file=COPYING
keywords =
    hpc
    weather-modelling
    weather-model
    meteorological-suites
    meteorological-modelling
    meteorological-models
platforms = any
classifiers =
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Atmospheric Science
python_requires = >=3.7

[options.entry_points]
# top level shell commands
console_scripts =
    rose2 = metomi.rose.scripts.rose:rose
    rosie2 = metomi.rose.scripts.rose:rosie
    rosa2 = metomi.rose.scripts.rose:rosa [rosa]
rose.commands =
    app-run = metomi.rose.app_run:main
    app-upgrade = metomi.rose.upgrade:main
    check-software = metomi.rose.scripts.check_software:main
    config = metomi.rose.config_cli:main
    config-diff = metomi.rose.config_diff:main
    config-dump = metomi.rose.config_dump:main
    date = metomi.rose.date_cli:main
    env-cat = metomi.rose.env_cat:main
    host-select = metomi.rose.host_select:main
    host-select-client = metomi.rose.host_select_client:main
    macro = metomi.rose.macro:main
    metadata-check = metomi.rose.metadata_check:main
    metadata-gen = metomi.rose.metadata_gen:main
    metadata-graph = metomi.rose.metadata_graph:main
    namelist-dump = metomi.rose.namelist_dump:main
    resource = metomi.rose.resource:main
    task-env = metomi.rose.task_env:main
    task-run = metomi.rose.task_run:main
rosie.commands =
    checkout = metomi.rosie.vc:checkout
    create = metomi.rosie.vc:create
    delete = metomi.rosie.vc:delete
    disco = metomi.rosie.ws:main
    go = metomi.rosie.browser:main
    graph = metomi.rosie.graph:main
    hello = metomi.rosie.ws_client_cli:hello
    id = metomi.rosie.suite_id:main
    lookup = metomi.rosie.ws_client_cli:lookup
    ls = metomi.rosie.ws_client_cli:list_local_suites
